--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,11 +1,12 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
+    color: hsl(0, 0%, 98%);
 }
 
 #todo-board {
     position: absolute;
-    top: 100px;
-    left: 350px;
+    top: 80px;
+    left: 320px;
 }
 
 form {
@@ -27,6 +28,13 @@ input :focus {
 
 .todo-list {
     margin-top: 50px;
+    /* height: 450px;
+    overflow-y: scroll; */
+}
+
+.list-items {
+    /* height: 300px;
+    overflow-y: scroll; */
 }
 
 .undone {
@@ -52,8 +60,8 @@ input :focus {
     align-items: center;
     justify-content: space-between;
     font-size: 16px;
-    padding: 30px 50px;
-    color: white;
+    padding: 20px 50px;
+    /* color: white; */
     border-bottom: 1px solid white;
 }
 
@@ -70,12 +78,19 @@ input :focus {
     opacity: 0.5;
 }
 
-.butt a:focus {
+.butt:focus {
     outline: none;
 }
 
 .active {
     color: blue;
+}
+
+.filterBtns {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 
@@ -85,6 +100,12 @@ input :focus {
         top: 100px;
         left: 80px;
     }
+    form {
+        padding: 7px 28px;
+    }
+    .items {
+        padding: 20px 28px;
+    }
 }
 
 @media screen and (max-width: 540px) {
@@ -93,4 +114,25 @@ input :focus {
         top: 80px;
         left: 30px;
     }
+    form {
+        padding: 7px 12px;
+    }
+    .items {
+        padding: 20px 12px;
+    }
+    .deleteBtn {
+        display: block;
+    }
+    .filterBtns {
+        display: grid;
+        justify-items: center;
+        justify-content: space-between;
+        /* grid-template-rows: repeat(3, minmax(0, 1fr));	 */
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+    .filterBtns :nth-child(2) {
+        order: 3;
+        /* align-self: center; */
+    }
+    
 }
