--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     left: 320px;
 }
 
+
 form {
     padding: 7px 50px;
     margin: 40px 0;
@@ -27,14 +28,12 @@ input :focus {
 }
 
 .todo-list {
-    margin-top: 50px;
-    /* height: 450px;
-    overflow-y: scroll; */
+    margin-top: -25px;
 }
 
 .list-items {
-    /* height: 300px;
-    overflow-y: scroll; */
+    height: 450px;
+    overflow-y: scroll;
 }
 
 .undone {
@@ -93,6 +92,11 @@ input :focus {
     justify-content: space-between;
 }
 
+/* .dark {
+    background: #000;
+    color: white;
+} */
+
 
 @media screen and (max-width: 768px) {
     #todo-board {
@@ -120,6 +124,9 @@ input :focus {
     .items {
         padding: 20px 12px;
     }
+    .list-items {
+        height: 300px;
+    }
     .deleteBtn {
         display: block;
     }
@@ -127,12 +134,18 @@ input :focus {
         display: grid;
         justify-items: center;
         justify-content: space-between;
-        /* grid-template-rows: repeat(3, minmax(0, 1fr));	 */
-        grid-template-columns: repeat(2, minmax(0, 1fr));
+        grid-template-rows: repeat(3, minmax(0, 1fr));	
+        /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
     }
     .filterBtns :nth-child(2) {
         order: 3;
         /* align-self: center; */
     }
     
+}
+
+@media screen and (max-width: 380px) {
+    .list-items {
+        height: 380px;
+    }
 }
