--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -57,7 +57,8 @@ input :focus {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    gap: 10px;
+    /* justify-content: space-between; */
     font-size: 16px;
     padding: 20px 50px;
     /* color: white; */
@@ -66,6 +67,7 @@ input :focus {
 
 .deleteBtn {
     display: none;
+    justify-self: flex-end;
 }
 
 .items:hover .deleteBtn {
@@ -122,7 +124,7 @@ input :focus {
         padding: 7px 12px;
     }
     .items {
-        padding: 20px 12px;
+        padding: 20px 7px;
     }
     .list-items {
         height: 300px;
