--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,177 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background-color: #000;
+    transition: background 0.5s ease-out;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+#todo-board {
+    position: absolute;
+    top: 50px;
+    left: 320px;
+}
+
+
+form {
+    padding: 7px 50px;
+    margin: 40px 0;
+}
+
+input[type='text'] {
+    background: transparent;
+}
+
+input[type='radio'] {
+    background: transparent;
+}
+
+input :focus {
+    outline: none;
+}
+
+.todo-list {
+    margin-top: -25px;
+}
+
+.list-items {
+    height: 450px;
+    overflow-y: scroll;
+}
+
+.undone {
+    width: 20px;
+    height: 20px;
+    border: 1px solid #808080;
+    border-radius: 50%;
+}
+
+.checked {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-image: linear-gradient(to left, hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+    transition: background 0.5s ease-out;
+  }
+
+.iconchecked {
+    display: block;
+}
+
+.items {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+    /* justify-content: space-between; */
+    font-size: 16px;
+    padding: 20px 50px;
+    /* color: white; */
+    border-bottom: 1px solid white;
+}
+
+.deleteBtn {
+    display: none;
+    justify-self: flex-end;
+}
+
+.items:hover .deleteBtn {
+    display: block;
+}
+
+.namechecked {
+    text-decoration: line-through;
+    opacity: 0.5;
+}
+
+.butt:focus {
+    outline: none;
+}
+
+.active {
+    color: blue;
+}
+
+.filterBtns {
+    border-bottom: 1px solid white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #000;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(223, 136, 136);
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+
+  }
+
+@media screen and (max-width: 768px) {
+    #todo-board {
+        position: absolute;
+        top: 100px;
+        left: 80px;
+    }
+    form {
+        padding: 7px 28px;
+    }
+    .items {
+        padding: 20px 28px;
+    }
+}
+
+@media screen and (max-width: 540px) {
+    #todo-board {
+        position: absolute;
+        top: 80px;
+        left: 30px;
+    }
+    form {
+        padding: 7px 12px;
+    }
+    .items {
+        padding: 20px 7px;
+    }
+    .list-items {
+        height: 300px;
+    }
+    .deleteBtn {
+        display: block;
+    }
+    .filterBtns {
+        display: grid;
+        justify-items: center;
+        justify-content: space-between;
+        grid-template-rows: repeat(3, minmax(0, 1fr));	
+        /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
+    }
+    .filterBtns :nth-child(2) {
+        order: 3;
+        /* align-self: center; */
+    }
+    
+}
+
+@media screen and (max-width: 380px) {
+    .list-items {
+        height: 380px;
+    }
+}
