--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,9 +2,15 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
+    width: 100%;
+    position: fixed;
     background-color: #000;
     transition: background 0.5s ease-out;
     font-family: 'Josefin Sans', sans-serif;
+}
+
+.dark body {
+    background-color: #fff;
 }
 
 #todo-board {
@@ -36,7 +42,7 @@ input :focus {
 }
 
 .list-items {
-    height: 450px;
+    max-height: 430px;
     overflow-y: scroll;
     color: #fff;
 }
@@ -95,6 +101,8 @@ input :focus {
 
 .filterBtns {
     border-bottom: 1px solid white;
+    border-top: 1px solid white;
+    color: #fff;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -121,11 +129,25 @@ input :focus {
 
   }
 
+@media screen and (max-width: 1024px) {
+    #todo-board {
+        position: absolute;
+        top: 100px;
+        left: 90px;
+    }
+    .todo-list {
+        height: 900px;
+    }
+}
+
 @media screen and (max-width: 768px) {
     #todo-board {
         position: absolute;
         top: 100px;
         left: 80px;
+    }
+    .todo-list {
+        height: 610px;
     }
     form {
         padding: 7px 28px;
@@ -139,13 +161,16 @@ input :focus {
     #todo-board {
         position: absolute;
         top: 80px;
-        left: 30px;
+        left: 20px;
+    }
+    .todo-list {
+        height: 295px;
     }
     form {
         padding: 7px 12px;
     }
     .items {
-        padding: 20px 7px;
+        padding: 4px 10px;
     }
     .list-items {
         height: 300px;
@@ -157,18 +182,33 @@ input :focus {
         display: grid;
         justify-items: center;
         justify-content: space-between;
-        grid-template-rows: repeat(3, minmax(0, 1fr));	
-        /* grid-template-columns: repeat(2, minmax(0, 1fr)); */
+        gap: 20px;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
     }
     .filterBtns :nth-child(2) {
         order: 3;
-        /* align-self: center; */
+        align-self: center;
+        grid-column: span 2 / span 2;
     }
-    
+    .filterBtns :nth-child(3) {
+        order: 2;
+    }
 }
 
 @media screen and (max-width: 380px) {
     .list-items {
         height: 380px;
+    }
+    .todo-list {
+        height: 390px;
+    }
+    #todo-board {
+        position: absolute;
+        top: 25px;
+        left: 15px;
+    }
+    form {
+        padding: 3px 50px;
+        margin: 35px 0;
     }
 }
